--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@babel/polyfill": "^7.6.0",
     "@babel/runtime": "^7.6.0",
     "core-js": "^3.2.1",
+    "element-ui": "^2.13.2",
     "jquery": "^3.4.1",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
