--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "core-js": "^3.2.1",
     "element-ui": "^2.13.2",
     "jquery": "^3.4.1",
+    "vant": "^2.10.2",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.1"
